# dw3-survey-logger

./: .gitignore  COORDINATE_SYSTEM_ANALYSIS.md  LICENSE  PATCH_NOTES.md  README.md  README.txt  caching.py  config_loader.py  data_manager.py  density_worksheet_exporter.py  density_worksheet_exporter_multi_file.py  dependency_injection.py  drift_guardrail.py  dw3_survey_logger.spec  earth2_database.py  error_handling.py  hotkey_manager.py  import_journals.py  journal_monitor.py  journal_state_manager.py  main.py  model.py  observer_models.py  observer_overlay.py  observer_storage.py  presenter.py  pyproject.toml  requirements.txt  run.sh  shutdown_manager.py  test_earth2.py  theme.py  update_checker.py  utils.py  view.py  window_focus.py
.github/workflows/: build-windows-exe.yml
src/: pyinstaller-main.py
src/dw3_survey_logger/: boxel_sheet_exporter.py  density_worksheet_exporter_multi_file.py  dependency_injection.py  diagnostics_exporter.py  earth2_database.py  earth_similarity_score.py  hotkey_manager.py  import_journals.py  journal_monitor.py  journal_state_manager.py  main.py  model.py  observer_models.py  observer_models_BACKUP.py  observer_overlay.py  observer_storage.py  presenter.py
src/dw3_survey_logger/ui/: __init__.py  dialogs.py  panels.py  theme.py  view.py
src/ui/: survey_selector.py  view.py  widgets.py
templates/: Logarithmic Stellar Density Scan Worksheet.xlsx  Stellar Density Scan Worksheet.xlsx
ui/: __init__.py  panels.py  survey_selector.py  view.py
